--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <hr>
                 <p>
                 Hi ,<br>
-                I am Cengiz, I was born in 1995. I live in Massachusetts, United States.<br>
+                I am Cengiz. I live in Massachusetts, United States.<br>
                 <br>
                 Computer is my passion, this passion that started in my childhood, I followed it in my school life. 
                 The excitement of starting a project or dealing with a problem and working for hours to solve it, 
