--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <hr>
                 <p>
                 Hi ,<br>
-                I am Cengiz, I was born in 1995. I live in Massachusetts, United States.
-
+                I am Cengiz, I was born in 1995. I live in Massachusetts, United States.<br>
+                <br>
                 Computer is my passion, this passion that started in my childhood, I followed it in my school life. 
                 The excitement of starting a project or dealing with a problem and working for hours to solve it, 
                 followed by the joy of successfully finishing the task after all my efforts, 
@@ -403,7 +403,7 @@
                 <hr>
                 <p>
 
-                Email     : cngzltrk@gmail.com<br>
+                Email     : cengiz.alturk@outlook.com<br>
                 Github    : cngzltrk <br>
                 Linkedin  : cngzltrk <br>
 
