--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 Github    : cngzltrk <br>
                 Linkedin  : cngzltrk <br>
 
-                Adres : Bornava, Izmir / Turkey<br>
+                Adres : Belmont, Massachusetts, United States<br>
               </p>
               </div>
 
