--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                     <!--iş-->
                     <div class="tab-pane container active" id="is">
 
-                      <span class="baslik">DCA Food</span><br>
+                      <span class="baslik">Digybite</span><br>
                       <span class="tür">DevOps Engineer</span><br>
                       <span class="yer">Dubai,The United Arab Emirates</span><br>
                       <span class="zaman">01/2023 - 06/2024</span><br>
-                      <span class="">DCA Food is part of Lean Scale, Dubai based digital venture builder. Connects local and
+                      <span class="">Digybite is part of Lean Scale, Dubai based digital venture builder. Connects local and
                         international restaurants to the digital world</span>
 
                         <ul>
@@ -108,7 +108,7 @@
                           <li>Development of deployment process, CI/CD pipelines using tools gitlab cicd,
                             jenkins, git, gitlab AWS docker registry</li>
                           <li>Managing AWS resources, cost optimization, system automation.</li>
-                          <li>Monitoring and logging using tools such as Prometheus ,Netdata , Elastic stack, Graylog</li>
+                          <li>Monitoring and logging using tools such as Prometheus ,Netdata , Elastic stack, SonarQube</li>
                           <li>Troubleshooting</li>
                         </ul>
 
